<resources>
    <string name="app_name">Eventorias</string>
    <string name="no_network">No network</string>
    <string name="loading">Loading</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error">Error</string>
    <string name="not_find">Image not find</string>
    <string name="event_list">Event list</string>
    <string name="search">Search an event by title</string>
    <string name="sortByDate">Sort event by date</string>
    <string name="addEvent">Add an event</string>
    <string name="event_creation">Creation of an event</string>
    <string name="back">Back</string>
    <string name="impossible_to_load_a_map">Impossible to load a map</string>
    <string name="title">Title</string>
    <string name="mandatorytitle">Mandatory title</string>
    <string name="validate">Validate</string>
    <string name="description">Description</string>
    <string name="mandatorydescription">Mandatory description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dateformat">MM/DD/YYYY</string>
    <string name="timeformat">HH:MM</string>
    <string name="address">Address</string>
    <string name="enterfulladdress">Enter full address</string>
    <string name="mandatoryaddress">Mandatory address</string>
    <string name="eventNoAddress">Event has not address</string>
    <string name="takeapicture">Take a picture</string>
    <string name="selectphotoingallery">Select a photo in your gallery</string>
    <string name="mandatoryphoto">Mandatory photo</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="userprofile">User profile</string>
    <string name="event">Event</string>
    <string name="notifications">Notifications</string>
    <string name="the_event_date_must_be_in_the_future">The event date must be in the future</string>
    <string name="mandatorydatetime">Mandatory date / time</string>
    <string name="loginCancel">Login process cancelled by user</string>
    <string name="connexion_ok">Login OK</string>
    <string name="deconnexion_ok">Logout OK</string>
    <string name="SignOut">Sign out</string>
    <string name="tap_to_enable_notifications">Enable notifications</string>
    <string name="tap_to_turn_off_notifications">Turn off notifications</string>
    <string name="avatar_of_the_event_creator">Avatar of the event creator</string>
    <string name="event_image">Event image</string>
    <string name="search_event_by_title">Search event by title</string>
    <string name="no_event">No event</string>
    <string name="permission_already_denied">Permission already denied. Please enable it in Settings.</string>
    <string name="try_again">Try again</string>
</resources>