package com.openclassrooms.p15_eventorias.ui

/**
 * Contient le nom des tags (factorisation)
 */

object TestTags { // Singleton

    //const val EVENT_ID_PREFIX = "event_id_"
    const val EVENT_ITEM_LAZY = "eventItemLazy"

    const val LAZY_COLUMN_EVENTS = "lazyColumnEvents"

    const val EVENT_ITEM_LOAD = "tagEventItem"

    const val APPBAR_SEARCH_FIELD = "tagSearchField"

    const val BOTTOM_BAR_ICON_EVENT = "iconEvent"
    const val BOTTOM_BAR_ICON_PROFILE = "iconProfile"


}